# ai-travel-planner

./: .env  .env.example  .env.prod.example  .env.test  .gitignore  CHAT_SERVICE_STARTUP_SUCCESS.md  DATA_INITIALIZATION_GUIDE.md  Makefile  PROJECT_COMPLETION_REPORT.md  README.md  SETUP_SUMMARY.md  STARTUP_GUIDE.md  SYSTEM_STATUS.md  USER_CREATION_SUMMARY.md  alembic.ini  conda-environment.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  startup_verification.py  test_services.py  修复报告.md
.github/workflows/: ci.yml
.kiro/specs/ai-travel-planner/: design.md  tasks.md
backend/: .env.dev
backend/docker/: docker-compose.dev.yml
backend/docker/mysql/init/: 01-init-database.sql
backend/scripts/: demo.py  deploy.sh  fix_services.sh  init_system.py  start_backend_services.sh  start_system.sh  test_services.sh
backend/services/agent-service/: Dockerfile  Dockerfile.prod  main.py  specialized_agents.py
backend/services/api-gateway/: Dockerfile  Dockerfile.dev  Dockerfile.prod  main.py
backend/services/chat-service/: Dockerfile  Dockerfile.prod  context_engine.py  conversation_manager.py  main.py  mcp_tools.py
backend/services/integration-service/: Dockerfile  data_integrator.py  external_api_integrator.py  main.py  requirements.txt
backend/services/planning-service/: Dockerfile  main.py  requirements.txt  travel_planning_engine.py
backend/services/rag-service/: Dockerfile  Dockerfile.prod  advanced_retrieval.py  generation_optimizer.py  knowledge_builder.py  main.py  requirements.txt  vector_database.py
backend/services/user-service/: Dockerfile  main.py
backend/shared/: __init__.py
backend/shared/cache/: redis_client.py
backend/shared/config/: settings.py
backend/shared/database/: __init__.py  connection.py
backend/shared/database/models/: __init__.py  agent.py  conversation.py  knowledge.py  travel.py  user.py
backend/shared/models/: agent.py  common.py  conversation.py  knowledge.py  travel.py  user.py
backend/shared/vector_db/: __init__.py  client.py  collections.py
deployment/: README.md  docker-compose.yml
deployment/alembic/: env.py
deployment/docker/: DEPLOYMENT_GUIDE.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml
deployment/nginx/: nginx.conf
deployment/nginx/conf.d/: default.conf
deployment/prometheus/: prometheus.yml
deployment/scripts/deployment/: deploy.sh
deployment/scripts/docker/: manage.sh
docs/: china-services.md  database-setup.md
frontend/: .env.example  CONFIGURATION_MIGRATION.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  websocket-connection-test.html  websocket-test.html
frontend/docker/: Dockerfile
frontend/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  chat.ts  travel.ts
frontend/src/components/TravelPlan/: TravelPlanDetail.tsx  TravelPlanList.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/chat/: ChatWindow.css  ChatWindow.tsx  WebSocketService.ts
frontend/src/components/layout/: MainLayout.tsx
frontend/src/config/: README.md  index.ts  simple.ts
frontend/src/pages/: ChatPage.tsx  HomePage.tsx  NotFoundPage.tsx  PlanPage.tsx  UserPage.tsx
frontend/src/pages/auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/services/: websocket.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: appSlice.ts  authSlice.ts  chatSlice.ts  planSlice.ts  userSlice.ts
frontend/src/types/: index.ts
frontend/src/utils/: devtools.ts  logger.ts
scripts/: demo.py  deploy.sh  init_system.py  run_tests.py  start-database.bat  start-database.sh  start_system.sh
scripts/database/: init_db.py
scripts/deployment/: deploy.sh
scripts/docker/: manage.sh
services/agent-service/: Dockerfile  Dockerfile.prod  main.py  multi_agent_system.py  specialized_agents.py
services/api-gateway/: Dockerfile.dev  Dockerfile.prod  main.py
services/chat-service/: Dockerfile  Dockerfile.prod  context_engine.py  conversation_manager.py  main.py  mcp_server.py  mcp_tools.py  start.py  websocket_manager.py
services/integration-service/: Dockerfile  external_api_integrator.py
services/planning-service/: main.py  travel_planning_engine.py
services/rag-service/: Dockerfile  Dockerfile.prod  advanced_retrieval.py  generation_optimizer.py  knowledge_builder.py  main.py  vector_database.py
services/user-service/: Dockerfile  Dockerfile.prod
shared/auth/: middleware.py
shared/config/: settings.py
shared/database/: connection.py
shared/database/models/: __init__.py  agent.py  conversation.py  knowledge.py  travel.py  user.py
shared/models/: __init__.py  agent.py  conversation.py  knowledge.py  travel.py  user.py
shared/monitoring/: metrics.py
shared/utils/: __init__.py  logger.py
shared/vector_db/: models.py
